--- a/public/css/tailwind.css
+++ b/public/css/tailwind.css
@@ -597,6 +597,14 @@ Ensure the default browser behavior of the `hidden` attribute.
   margin-right: -12px;
 }
 
+.mt-3 {
+  margin-top: 16px;
+}
+
+.mt-5 {
+  margin-top: 32px;
+}
+
 .flex {
   display: flex;
 }
@@ -726,6 +734,42 @@ Ensure the default browser behavior of the `hidden` attribute.
           animation: bounce 1s infinite;
 }
 
+@-webkit-keyframes spin {
+  to {
+    transform: rotate(360deg);
+  }
+}
+
+@keyframes spin {
+  to {
+    transform: rotate(360deg);
+  }
+}
+
+.animate-spin {
+  -webkit-animation: spin 1s linear infinite;
+          animation: spin 1s linear infinite;
+}
+
+@-webkit-keyframes ping {
+  75%, 100% {
+    transform: scale(2);
+    opacity: 0;
+  }
+}
+
+@keyframes ping {
+  75%, 100% {
+    transform: scale(2);
+    opacity: 0;
+  }
+}
+
+.animate-ping {
+  -webkit-animation: ping 1s cubic-bezier(0, 0, 0.2, 1) infinite;
+          animation: ping 1s cubic-bezier(0, 0, 0.2, 1) infinite;
+}
+
 .grid-cols-4 {
   grid-template-columns: repeat(4, minmax(0, 1fr));
 }
@@ -804,6 +848,11 @@ Ensure the default browser behavior of the `hidden` attribute.
   border-color: rgb(23 23 23 / var(--tw-border-opacity));
 }
 
+.border-green {
+  --tw-border-opacity: 1;
+  border-color: rgb(19 206 102 / var(--tw-border-opacity));
+}
+
 .border-b-wind {
   --tw-border-opacity: 1;
   border-bottom-color: rgb(39 39 42 / var(--tw-border-opacity));
@@ -817,6 +866,11 @@ Ensure the default browser behavior of the `hidden` attribute.
 .border-l-wind {
   --tw-border-opacity: 1;
   border-left-color: rgb(39 39 42 / var(--tw-border-opacity));
+}
+
+.border-l-darkwind {
+  --tw-border-opacity: 1;
+  border-left-color: rgb(23 23 23 / var(--tw-border-opacity));
 }
 
 .bg-black {
@@ -842,6 +896,16 @@ Ensure the default browser behavior of the `hidden` attribute.
 .bg-red {
   --tw-bg-opacity: 1;
   background-color: rgb(255 0 0 / var(--tw-bg-opacity));
+}
+
+.bg-yellow {
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 200 44 / var(--tw-bg-opacity));
+}
+
+.bg-blue {
+  --tw-bg-opacity: 1;
+  background-color: rgb(31 182 255 / var(--tw-bg-opacity));
 }
 
 .bg-contain {
