--- a/public/css/tailwind.css
+++ b/public/css/tailwind.css
@@ -645,6 +645,10 @@ Ensure the default browser behavior of the `hidden` attribute.
   height: 32rem;
 }
 
+.h-1 {
+  height: 8px;
+}
+
 .w-5 {
   width: 32px;
 }
@@ -659,6 +663,10 @@ Ensure the default browser behavior of the `hidden` attribute.
 
 .w-auto {
   width: auto;
+}
+
+.w-20 {
+  width: 220px;
 }
 
 .flex-shrink-0 {
@@ -734,42 +742,6 @@ Ensure the default browser behavior of the `hidden` attribute.
           animation: bounce 1s infinite;
 }
 
-@-webkit-keyframes spin {
-  to {
-    transform: rotate(360deg);
-  }
-}
-
-@keyframes spin {
-  to {
-    transform: rotate(360deg);
-  }
-}
-
-.animate-spin {
-  -webkit-animation: spin 1s linear infinite;
-          animation: spin 1s linear infinite;
-}
-
-@-webkit-keyframes ping {
-  75%, 100% {
-    transform: scale(2);
-    opacity: 0;
-  }
-}
-
-@keyframes ping {
-  75%, 100% {
-    transform: scale(2);
-    opacity: 0;
-  }
-}
-
-.animate-ping {
-  -webkit-animation: ping 1s cubic-bezier(0, 0, 0.2, 1) infinite;
-          animation: ping 1s cubic-bezier(0, 0, 0.2, 1) infinite;
-}
-
 .grid-cols-4 {
   grid-template-columns: repeat(4, minmax(0, 1fr));
 }
@@ -822,6 +794,14 @@ Ensure the default browser behavior of the `hidden` attribute.
   border-radius: 9999px;
 }
 
+.rounded-sm {
+  border-radius: 0.125rem;
+}
+
+.rounded-md {
+  border-radius: 0.375rem;
+}
+
 .border-2 {
   border-width: 2px;
 }
@@ -848,11 +828,6 @@ Ensure the default browser behavior of the `hidden` attribute.
   border-color: rgb(23 23 23 / var(--tw-border-opacity));
 }
 
-.border-green {
-  --tw-border-opacity: 1;
-  border-color: rgb(19 206 102 / var(--tw-border-opacity));
-}
-
 .border-b-wind {
   --tw-border-opacity: 1;
   border-bottom-color: rgb(39 39 42 / var(--tw-border-opacity));
@@ -866,11 +841,6 @@ Ensure the default browser behavior of the `hidden` attribute.
 .border-l-wind {
   --tw-border-opacity: 1;
   border-left-color: rgb(39 39 42 / var(--tw-border-opacity));
-}
-
-.border-l-darkwind {
-  --tw-border-opacity: 1;
-  border-left-color: rgb(23 23 23 / var(--tw-border-opacity));
 }
 
 .bg-black {
@@ -896,16 +866,6 @@ Ensure the default browser behavior of the `hidden` attribute.
 .bg-red {
   --tw-bg-opacity: 1;
   background-color: rgb(255 0 0 / var(--tw-bg-opacity));
-}
-
-.bg-yellow {
-  --tw-bg-opacity: 1;
-  background-color: rgb(255 200 44 / var(--tw-bg-opacity));
-}
-
-.bg-blue {
-  --tw-bg-opacity: 1;
-  background-color: rgb(31 182 255 / var(--tw-bg-opacity));
 }
 
 .bg-contain {
