--- a/public/css/tailwind.css
+++ b/public/css/tailwind.css
@@ -461,40 +461,6 @@ Ensure the default browser behavior of the `hidden` attribute.
   --tw-backdrop-sepia:  ;
 }
 
-.container {
-  width: 100%;
-}
-
-@media (min-width: 640px) {
-  .container {
-    max-width: 640px;
-  }
-}
-
-@media (min-width: 768px) {
-  .container {
-    max-width: 768px;
-  }
-}
-
-@media (min-width: 1024px) {
-  .container {
-    max-width: 1024px;
-  }
-}
-
-@media (min-width: 1280px) {
-  .container {
-    max-width: 1280px;
-  }
-}
-
-@media (min-width: 1536px) {
-  .container {
-    max-width: 1536px;
-  }
-}
-
 .fixed {
   position: fixed;
 }
@@ -503,26 +469,13 @@ Ensure the default browser behavior of the `hidden` attribute.
   position: absolute;
 }
 
-.relative {
-  position: relative;
-}
-
 .inset-x-0 {
   left: 0px;
   right: 0px;
 }
 
-.inset-y-0 {
-  top: 0px;
-  bottom: 0px;
-}
-
 .top-0 {
   top: 0px;
-}
-
-.left-0 {
-  left: 0px;
 }
 
 .bottom-0 {
@@ -537,17 +490,12 @@ Ensure the default browser behavior of the `hidden` attribute.
   bottom: 16px;
 }
 
+.left-0 {
+  left: 0px;
+}
+
 .z-50 {
   z-index: 50;
-}
-
-.z-10 {
-  z-index: 10;
-}
-
-.mx-auto {
-  margin-left: auto;
-  margin-right: auto;
 }
 
 .mr-4 {
@@ -580,14 +528,6 @@ Ensure the default browser behavior of the `hidden` attribute.
 
 .mb-4 {
   margin-bottom: 24px;
-}
-
-.-ml-2 {
-  margin-left: -12px;
-}
-
-.-mr-2 {
-  margin-right: -12px;
 }
 
 .mt-3 {
@@ -626,16 +566,12 @@ Ensure the default browser behavior of the `hidden` attribute.
   height: 25rem;
 }
 
-.h-6 {
-  height: 56px;
-}
-
-.h-8 {
-  height: 15rem;
-}
-
 .h-20 {
   height: 32rem;
+}
+
+.h-6 {
+  height: 56px;
 }
 
 .w-5 {
@@ -646,16 +582,12 @@ Ensure the default browser behavior of the `hidden` attribute.
   width: 100%;
 }
 
-.w-6 {
-  width: 56px;
-}
-
 .w-auto {
   width: auto;
 }
 
-.flex-shrink-0 {
-  flex-shrink: 0;
+.w-6 {
+  width: 56px;
 }
 
 .-rotate-90 {
@@ -687,28 +619,12 @@ Ensure the default browser behavior of the `hidden` attribute.
   animation: pulse 2s cubic-bezier(0.4, 0, 0.6, 1) infinite;
 }
 
-@keyframes bounce {
-  0%, 100% {
-    transform: translateY(-25%);
-    animation-timing-function: cubic-bezier(0.8,0,1,1);
-  }
-
-  50% {
-    transform: none;
-    animation-timing-function: cubic-bezier(0,0,0.2,1);
-  }
-}
-
-.animate-bounce {
-  animation: bounce 1s infinite;
+.grid-cols-1 {
+  grid-template-columns: repeat(1, minmax(0, 1fr));
 }
 
 .grid-cols-4 {
   grid-template-columns: repeat(4, minmax(0, 1fr));
-}
-
-.flex-row {
-  flex-direction: row;
 }
 
 .flex-col {
@@ -731,6 +647,10 @@ Ensure the default browser behavior of the `hidden` attribute.
   justify-content: center;
 }
 
+.justify-between {
+  justify-content: space-between;
+}
+
 .gap-3 {
   gap: 16px;
 }
@@ -751,12 +671,12 @@ Ensure the default browser behavior of the `hidden` attribute.
   scroll-behavior: smooth;
 }
 
-.rounded-full {
-  border-radius: 9999px;
-}
-
 .rounded-md {
   border-radius: 0.375rem;
+}
+
+.rounded-full {
+  border-radius: 9999px;
 }
 
 .border-2 {
@@ -829,17 +749,8 @@ Ensure the default browser behavior of the `hidden` attribute.
   background-size: cover;
 }
 
-.bg-contain {
-  background-size: contain;
-}
-
 .bg-center {
   background-position: center;
-}
-
-.object-contain {
-  -o-object-fit: contain;
-     object-fit: contain;
 }
 
 .object-none {
@@ -877,6 +788,16 @@ Ensure the default browser behavior of the `hidden` attribute.
   padding-bottom: 12px;
 }
 
+.px-4 {
+  padding-left: 24px;
+  padding-right: 24px;
+}
+
+.py-3 {
+  padding-top: 16px;
+  padding-bottom: 16px;
+}
+
 .pt-6 {
   padding-top: 56px;
 }
@@ -909,6 +830,10 @@ Ensure the default browser behavior of the `hidden` attribute.
   padding-top: 32px;
 }
 
+.text-left {
+  text-align: left;
+}
+
 .text-center {
   text-align: center;
 }
@@ -939,6 +864,10 @@ Ensure the default browser behavior of the `hidden` attribute.
 
 .text-2xl {
   font-size: 1.5rem;
+}
+
+.text-\[14px\] {
+  font-size: 14px;
 }
 
 .text-xl {
@@ -985,6 +914,11 @@ Ensure the default browser behavior of the `hidden` attribute.
 .text-darkwhite {
   --tw-text-opacity: 1;
   color: rgb(209 213 219 / var(--tw-text-opacity));
+}
+
+.text-black {
+  --tw-text-opacity: 1;
+  color: rgb(0 0 0 / var(--tw-text-opacity));
 }
 
 .text-red {
@@ -1092,6 +1026,15 @@ Ensure the default browser behavior of the `hidden` attribute.
   background-color: rgb(23 23 23 / var(--tw-bg-opacity));
 }
 
+.round {
+  border-radius: 0.375rem;
+  border-width: 2px;
+  --tw-border-opacity: 1;
+  border-color: rgb(39 39 42 / var(--tw-border-opacity));
+  padding-left: 12px;
+  padding-right: 12px;
+}
+
 .tex{
   font-size: 16rem;
   font-weight: bold;
@@ -1155,19 +1098,9 @@ details.styled summary{
   }
 }
 
-.hover\:bg-darkwind:hover {
-  --tw-bg-opacity: 1;
-  background-color: rgb(23 23 23 / var(--tw-bg-opacity));
-}
-
 .hover\:text-white:hover {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
-}
-
-.focus\:outline-none:focus {
-  outline: 2px solid transparent;
-  outline-offset: 2px;
 }
 
 @media (min-width: 768px) {
@@ -1228,14 +1161,6 @@ details.styled summary{
 
   .lg\:mt-20 {
     margin-top: 220px;
-  }
-
-  .lg\:-ml-4 {
-    margin-left: -24px;
-  }
-
-  .lg\:-mr-4 {
-    margin-right: -24px;
   }
 
   .lg\:block {
